--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
 <app-content></app-content>
+<inline-content></inline-content>
+<app-form></app-form>
 <app-footer></app-footer>
