--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
-<app-content></app-content>
-<inline-content></inline-content>
-<app-form></app-form>
+<app-student></app-student>
 <app-footer></app-footer>
