--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-student></app-student>
+<!-- <app-student></app-student> -->
+<a routerLink="userlist" routerLinkActive="active">Users</a>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
